--- a/socials.html
+++ b/socials.html
@@ -26,7 +26,7 @@
           <li><a href="#socials">go to socials</a></li>
           <li>
             <a
-              href="https://discord.gg/your-server-invite-link"
+              href="https://discord.gg/7qKPBM3bvm"
               target="_blank"
               rel="noopener"
               id="join_discord"
