--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="#data">About</a></li>
           <li><a href="#repositories">Repositories</a></li>
           <li><a href="#contributions">Contributions</a></li>
-          <li><button href="./socials/">Socials</button></li>
+          <li><a href="./socials/">Socials</a></li>
 
         </ul>
       </nav>
