--- a/downloads/index.html
+++ b/downloads/index.html
@@ -16,11 +16,11 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#socials">go to Downloads</a></li>
+          <li><a href="#links">go to Downloads</a></li>
         </ul>
       </nav>
     </header>
-    <div id="socials">
+    <div id="links">
       <main>
         <a               
         href="phisics/Main.java"
@@ -52,7 +52,7 @@
         event.preventDefault();
 
         // get the target element (the #socials section)
-        const target = document.getElementById("socials");
+        const target = document.getElementById("links");
 
         // calculate the target's offset from the top of the document
         const offset = target.getBoundingClientRect().top + window.pageYOffset;
