--- a/downloads/index.html
+++ b/downloads/index.html
@@ -23,7 +23,7 @@
     <div id="links">
       <main>
         <a               
-        href="phisics/Main.java"
+        href="phisics/Main.java" download="Main.java"
         target="_blank"
         rel="noopener noreferrer"
 >
